objects/KB_ArticlesOmniscript__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ArticleReference__c</fullName>
        <inlineHelpText>Completar con la referencia al artículo que se quiere mostrar en el omniscript</inlineHelpText>
        <label>Número de Artículo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdOmniscriptStep__c</fullName>
        <inlineHelpText>Completar con el ID del paso del Omniscript en el que se muestra el Artículo</inlineHelpText>
        <label>ID Omniscript Step</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdOmniscript__c</fullName>
        <inlineHelpText>Completar con el ID del Omniscript en el que se muestra el Artículo</inlineHelpText>
        <label>ID Omniscript</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>KB Artículos en Omniscripts</label>
</CustomObject>